--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/Style.css" />
   </head>
   <body>
+    <!-- this is overlay -->
     <div class="overlay"></div>
     <div
       class="page w-75 container-fluid my-5 d-flex flex-column justify-content-center align-items-center position-relative"
@@ -79,7 +80,7 @@
         </table>
       </div>
     </div>
-
+    <!-- this model -->
     <div
       class="box-info position-absolute start-0 top-0 w-100 h-100 d-flex justify-content-center align-items-center d-none"
       style="backdrop-filter: blur(5px)"
